--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
       %title= content_for?(:title) ? yield(:title) : "Final Project"
       %meta{:content => content_for?(:description) ? yield(:description) : "Final Project", :name => "description"}
         = stylesheet_link_tag "application", :media => "all"
+        = stylesheet_link_tag 'custom-theme/jquery-ui-1.10.0.custom.css', :media=> 'all'
         = javascript_include_tag "application"
         = csrf_meta_tags
         = yield(:head)
