--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,4 +24,16 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
+ul.hmenu {
+  list-style: none;	
+  margin: 0 0 2em;
+  padding: 0;
+}
 
+ul.hmenu li {
+  display: inline;  
+}
+
+div.map {
+  height: 300px;
+}
