trying to add assciation in Her

--- a/app/views/routes/index.html.haml
+++ b/app/views/routes/index.html.haml
@@ -1,4 +1,7 @@
-%h2 Going on right now
+%h2.span4 Going on right now
+%span.pull-right.red 
+  = link_to 'New Route', '/routes/new', {:class => 'action_btn btn'}
+.clearfix
 
 .navbar
   .navbar-inner
