--- a/app/views/routes/_form.html.haml
+++ b/app/views/routes/_form.html.haml
@@ -7,11 +7,11 @@
           %li= msg
 
   .field
-    = f.label :country
-    = f.text_field :country
+    = f.label :from
+    = f.text_field :from
   .field
-    = f.label :city
-    = f.text_field :city
+    = f.label :to
+    = f.text_field :to
   .field
     = f.label :available_sits
     = f.text_field :available_sits
