--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
       %title= content_for?(:title) ? yield(:title) : "Hitchhiker Frontend"
+      <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
       %meta{:content => content_for?(:description) ? yield(:description) : "Hitchhiker Frontend", :name => "description"}
         = stylesheet_link_tag "application", :media => "all"
         = javascript_include_tag "application"
@@ -21,5 +22,17 @@
               = render 'layouts/messages'
               = yield
           %footer
+            
       / ! end of .container
     / ! end of #main
+:javascript
+  //$(document).ready( function() {
+   // L.Icon.Default.imagePath = "#{File.dirname asset_path 'marker-icon-2x.png'}"
+    //initmap();
+    //map.on('click', onMapClick);
+    //map.on('contextmenu', onMapLeftClick);
+
+    //new L.Control.GeoSearch({
+       //provider: new L.GeoSearch.Provider.OpenStreetMap()
+    //}).addTo(map);
+  //} );
