--- a/app/views/routes/_form.html.haml
+++ b/app/views/routes/_form.html.haml
@@ -9,7 +9,7 @@
   .span7.pull-right.well.well-small
     %div{:id => "map_canvas", :style => "border: 1px solid black; position:absolute; height:400px;position:relative"}
     %input{:type=>"hidden", :id=>"map_points"}
-    %input{:type=>"button",:onclick=>"reset()" , :value=>"Clear"}  
+    %input{:type=>"button",:id=>"clear_button" , :value=>"Clear"} 
          
   .span4.pull-left.well.well-small
     .field
@@ -54,6 +54,11 @@
     = f.submit 'Save'
     
 :javascript
+  
+  $('#clear_button').click(function(){
+      reset();
+  });
+  
   var directionsService = new google.maps.DirectionsService();
   var map;
   var origin = null;
@@ -64,13 +69,14 @@
   initialize();
  
   function initialize() {
-    directionsDisplay = new google.maps.DirectionsRenderer();
+    directionsDisplay = new google.maps.DirectionsRenderer({draggable: true});
     var startlocation = new google.maps.LatLng(39.115677,-84.511642);
     var myOptions = {
       zoom:15,
       mapTypeId: google.maps.MapTypeId.ROADMAP,
       draggableCursor: "pointer",
-      center: startlocation
+      center: startlocation,
+      
     }
     map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
     directionsDisplay.setMap(map);
@@ -128,8 +134,7 @@
         optimizeWaypoints: true,
         avoidHighways: false
     };
-    
-    directionsService.route(request, function(response, status) {
+      directionsService.route(request, function(response, status) {
       if (status == google.maps.DirectionsStatus.OK) {
     var points_text = "", points_json= "", format = "raw";
     //if (document.getElementById("json").checked) {
@@ -142,6 +147,8 @@
       points_text += 'var routeSpan = ' + serializeLatLng(response.routes[0].bounds.toSpan()) + ';\n';
       points_text += 'var routePoints = [\n'
    // }
+    document.getElementById("route_from").value = response.routes[0].legs[0].start_address 
+    document.getElementById("route_to").value = response.routes[0].legs[0].end_address
     response.routes[0].bounds.getCenter.lng
     var nPoints = response.routes[0].overview_path.length;
     for (var i = 0; i < nPoints; i++) { 
