--- a/app/views/routes/_user_vehicles_listing.html.haml
+++ b/app/views/routes/_user_vehicles_listing.html.haml
@@ -1,3 +1,3 @@
-%select{:id=>"vehicle_id"}
+%select{:id=>"route_vehicle_id", :name=>"route[vehicle_id]"}
   - vehicles_by_user.each do |vehicle|
     %option{selected: params[:vehicle_id] == "#{vehicle.id}", value:"#{vehicle.id}" }#{vehicle.brand} #{vehicle.model} #{vehicle.year}
