Create new hitchhiker

--- a/app/views/hitchhikers/new.html.haml
+++ b/app/views/hitchhikers/new.html.haml
@@ -22,7 +22,7 @@
    .control-group
     = label_tag :password, 'Password:'
     .controls
-     = text_field_tag :password,nil, class: 'input-xlarge'
+     = password_field_tag :password,nil, class: 'input-xlarge'
    .control-group
     = label_tag :hitchhiker, 'Hitchhiker:'
     = check_box_tag :hitchhiker
