--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,8 @@
       %meta{:content => content_for?(:description) ? yield(:description) : "Hitchhiker Frontend", :name => "description"}
         = stylesheet_link_tag "application", :media => "all"
         = javascript_include_tag "application"
+        = javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyCGPGmwMFoWQ86EgjUwUH4_D46hadjfZcY&sensor=false"
+        / %script{:src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyCGPGmwMFoWQ86EgjUwUH4_D46hadjfZcY&sensor=false", :type => "text/javascript"}
         = csrf_meta_tags
         = yield(:head)
   %body{:class => "#{controller_name} #{action_name}"}
