--- a/app/views/routes/index.html.haml
+++ b/app/views/routes/index.html.haml
@@ -25,12 +25,20 @@
 
 %table.table.table-bordered.table-hover
   %tbody
+    / - unless @routes.empty?
     - @routes.each do |route|
       %tr
-        %td.span11
-          Ciudad
-          = route.country
-          Available sits
+        %div{:class => "btn-group"}
+          = link_to 'Show', route.hitchhiker.entries.first,
+          {:class => 'btn-primary span1'}
+        %td.span1
+          = route.hitchhiker.entries.first.username
+        %td.span9
+          is going from
+          = route.from
+          to
+          = route.to
+        %td.span1
           = route.available_sits
         %td.span1
           = link_to 'Show', route,
