--- a/app/views/routes/show.html.haml
+++ b/app/views/routes/show.html.haml
@@ -21,7 +21,7 @@
 /     %input{:type=>"hidden", :id=>"map_points"}
 /     %input{:type=>"button",:id=>"clear_button" , :value=>"Clear"} 
  
-= link_to "Check In", controller: "routes", action: "check_in", id: @route['_id'],  user_id: @route['hitchhiker_id']
+= link_to "Check In", controller: "routes", action: "check_in", method: 'put', id: @route['_id'],  user_id: @route['hitchhiker_id']
 = link_to 'Edit', edit_route_path(@route)
 \|
 = link_to 'Back', routes_path
