--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,5 +1,9 @@
 = link_to "Hitchhiker Frontend", root_path, :class => 'brand'
 %ul.nav
+  %li 
+    = link_to 'Hitchhikers', hitchhikers_path
+  %li 
+    = link_to 'Routes', routes_path
   - if user_signed_in?
     %li
       = link_to 'Logout', destroy_user_session_path, :method=>'delete'
