removed Mongoid::Document includes and fixed the route _form

--- a/app/assets/stylesheets/route.css.scss
+++ b/app/assets/stylesheets/route.css.scss
@@ -27,6 +27,9 @@ h2{
   margin-left: 4px;
 }
 
+.btn.btn-primary {
+    margin-left: 361px;
+}
 .ui-timepicker-div .ui-widget-header { margin-bottom: 8px; background-color:#666; color:white; }
 .ui-timepicker-div dl { text-align: left; }
 .ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
