--- a/app/views/routes/index.html.haml
+++ b/app/views/routes/index.html.haml
@@ -32,5 +32,5 @@
         %td.span1
           = route.available_sits
         %td.span1
-          = link_to 'Check in', route,
+          = link_to 'Check in', route_path(:id => route._id),
           {:class => 'action_btn btn'}
