--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,20 +2,20 @@
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
   %p
-    = f.label :name
+    / = f.label :name
     %br/
-    = f.text_field :name
+    / = f.text_field :name
+  %div
+    = f.label :username
+    = f.text_field :username
   %div
     = f.label :email
-    %br/
     = f.email_field :email
   %div
     = f.label :password
-    %br/
     = f.password_field :password
   %div
     = f.label :password_confirmation
-    %br/
     = f.password_field :password_confirmation
   %div= f.submit "Sign up"
 = render "devise/shared/links"
