Sign up redirects to Edit Hitchhiker. fixed some links

--- a/app/views/hitchhikers/_form.html.haml
+++ b/app/views/hitchhikers/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @hitchhiker do |f|
+= form_tag @hitchhiker do |f|
   - if @hitchhiker.errors.any?
     #error_explanation
       %h2= "#{pluralize(@hitchhiker.errors.count, "error")} prohibited this hitchhiker from being saved:"
@@ -7,28 +7,36 @@
           %li= msg
 
   .control-group
-    = f.label :username
+    = label_tag :username
     .controls
-      = f.text_field :username, {:class=> 'ilusiom'}
+      = text_field_tag :username#, #{:class=> 'ilusiom'}
   .control-group
-    = f.label :name
+    = label_tag :name
     .controls
-      = f.text_field :name
+      = text_field_tag :name
   .control-group
-    = f.label :lastname
+    = label_tag :lastname
     .controls
-      = f.text_field :lastname
+      = text_field_tag :lastname
   .control-group
-    = f.label :email
+    = label_tag :email
     .controls
-      = f.text_field :email
+      = text_field_tag :email
   .control-group
     .controls.checkbox-controls
-      = f.check_box :hitchhiker
+      = check_box_tag :hitchhiker
       Hitchhiker
-
+  / field :name, type: String
+  / field :lastname, type:String
+  / field :username, type: String
+  / field :email, type: String
+  / field :password, type: String
+  / field :image, type: String
+  / field :admin, type: Boolean
+  / #field :fb_access, type:String
+  
   -# = f.fields_for :vehicles do |builder|
   -#  = render 'vehicle_fields', :f => builder
 
   .actions
-    = f.submit 'Save'
+    = submit_tag 'Save'
