--- a/app/views/hitchhikers/show.html.haml
+++ b/app/views/hitchhikers/show.html.haml
@@ -16,6 +16,6 @@
   %b Hitchhiker:
   = @hitchhiker.hitchhiker
 
-= link_to 'Edit', edit_hitchhiker_path(@hitchhiker)
+= link_to 'Edit', edit_hitchhiker_path(@hitchhiker._id)
 \|
 = link_to 'Back', hitchhikers_path
