SSL FUCKING ERROR!

--- a/app/views/hitchhikers/_form.html.haml
+++ b/app/views/hitchhikers/_form.html.haml
@@ -24,6 +24,10 @@
       = text_field_tag :email
   .control-group
     .controls.checkbox-controls
+      = button_tag :hitchhiker
+      Hitchhiker
+  .control-group
+    .controls.checkbox-controls
       = check_box_tag :hitchhiker
       Hitchhiker
   / field :name, type: String
