--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,7 @@
 %h2 Sign up
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
-  %p
-    / = f.label :name
-    %br/
-    / = f.text_field :name
   %div
-    = f.label :username
-    = f.text_field :username
-  %div
-    = f.label :email
-    = f.email_field :email
-  %div
-    = f.label :password
-    = f.password_field :password
-  %div
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation
+    = link_to 'Sign up with facebook', user_omniauth_authorize_path(:facebook)
   %div= f.submit "Sign up"
 = render "devise/shared/links"
