Fixing vehicles views in step2

--- a/app/views/devise/registrations/_user_vehicles_listing.html.haml
+++ b/app/views/devise/registrations/_user_vehicles_listing.html.haml
@@ -1,5 +1,5 @@
 %select{:id=>"route_vehicle_id", :name=>"route[vehicle_id]"}
-  - vehicles = vehicles_by_user
-  - unless vehicles.empty?
-    - vehicles.each do |vehicle|
-      %option{selected: params[:vehicle_id] == "#{vehicle.id}", value:"#{vehicle.id}" }#{vehicle.brand} #{vehicle.model} #{vehicle.year}
+  - brands = Vehicles.all.pluck :brand #Band.all.pluck(:name)
+  - unless brands.empty?
+    - brands.each do |brand|
+      %option{selected: params[:vehicle_id] == "#{vehicle.id}", value:"#{vehicle.id}" }
