--- a/app/views/devise/registrations/step2.html.haml
+++ b/app/views/devise/registrations/step2.html.haml
@@ -18,6 +18,6 @@
     %h5 Vehicle        
     .field
       = label_tag :vehicle
-      / = render partial: "user_vehicles_listing"
+      = render partial: "user_vehicles_listing"
   = f.submit 'Sign in'
   = link_to "Forgot your password?", new_password_path('user')
