--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,6 +2,6 @@
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
   %div
-    = link_to 'Sign up with facebook', user_omniauth_authorize_path(:facebook)
+    = link_to 'Sign up with facebook', user_omniauth_authorize_path(:facebook), {class: 'btn btn-primary'}
   %div= f.submit "Sign up"
 = render "devise/shared/links"
