--- a/app/views/devise/registrations/step2.html.haml
+++ b/app/views/devise/registrations/step2.html.haml
@@ -12,6 +12,8 @@
     = f.password_field :password
     = f.label :comfirm_password
     = f.password_field :comfirm_password 
+    = f.hidden_field :fb_id, :value => @facebook_data['fb_id']
+    = f.hidden_field :fb_token, :value => @facebook_data['fb_token']
   /= f.check_box :remember_me
   /= f.label :remember_me
   .span4.pull-left.well.well-small
